--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,49 +1,69 @@
+* {
+  color: #fff;
+}
+
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0px;
+  background-color: #282c34;
+}
+
+.content {
+  padding: 3rem;
 }
 
 .alert {
-    background-color: #ff4545;
-    margin: 50px;
+  background-color: #ff4545;
+  margin: 3rem;
 }
 
 form {
-    background-color: #dbd5d5;
-    width: 30%;
-    height: 250px;
-    margin: 20px auto;
-    padding: 25px;
-    border-radius: 2px;
+  background-color: #dbd5d5;
+  width: 20rem;
+  margin: 2rem auto;
+  padding: 2rem;
+  border-radius: 2px;
+}
+
+label {
+  width: 100%;
+  color: initial;
 }
 
 input {
-    margin: 5px;
-    margin-bottom: 10px;
+  width: 100%;
+  margin: 5% -0.5rem;
+  padding: 0.5rem;
+  color: initial;
 }
 
-.log-in, .log-out, .register {
+.log-in,
+.log-out,
+.register {
   background-color: #00acb0;
   border-radius: 4px;
   color: #f8f8f8;
-  min-height: 50px;
+  padding: 0.5rem;
   min-width: 100px;
-  outline:0;
+  outline: 0;
   cursor: pointer;
+  width: 7rem;
 }
 
-.log-in:hover, .log-out:hover, .register:hover {
+.log-in:hover,
+.log-out:hover,
+.register:hover {
   background-color: #008183;
 }
 
 /* This line makes the "Register" and "Login" buttons look like links */
 .link-button {
-    background:none;
-    color:inherit;
-    border:none;
-    padding:0;
-    font: inherit;
-    outline:0;
-    border-bottom:1px solid #444; 
-    cursor: pointer;
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  outline: 0;
+  border-bottom: 1px solid #444;
+  cursor: pointer;
 }
