--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,20 +1,25 @@
 .nav-title {
-    font-size: 24px;
-    font-weight: 700;
-    display: inline-block;
-    color: #f2f2f2;
-    padding-left: 10px;
+  font-weight: 300;
+  display: inline-block;
+  color: mintcream;
+  padding-left: 15px;
 }
 
 .nav {
   overflow: hidden;
-  background-color: #00acb0;
+  background-color: #db2cb5;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.nav-link {
+  all: unset;
 }
 
 .nav-link {
   float: left;
-  color: #f2f2f2;
-  background-color: #00acb0;
+  color: mintcream;
+  background-color: #db2cb5;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -22,15 +27,20 @@
 
   /* these last two make the logout button in
   the nav bar look like another link */
-  border:none;
+  border: none;
   cursor: pointer;
-  outline:0;
+  outline: 0;
 }
 
 .nav-link:hover {
-  background-color: #008183;
+  background-color: #be2a9e;
+  border-bottom: 3px solid #c5ffe3;
 }
 
 .nav-right {
   float: right;
+}
+
+.nav-right:last-child {
+  margin-right: 15px;
 }
