--- a/src/components/RegisterPage/Register.css
+++ b/src/components/RegisterPage/Register.css
@@ -8,9 +8,10 @@
   opacity: 0.9;
 
   color: #fff;
-  font-size: 0.75rem;
+  font-size: 1rem;
   letter-spacing: 1px;
   text-shadow: rgba(0, 0, 0, 0.9) 0px 1px 2px;
+  /* font-variant: small-caps; */
 
   background: #434343;
   border: 1px solid #242424;
@@ -62,10 +63,10 @@
   background: #3a617e;
 }
 .button.green {
-  background: #477343;
+  background: #498b43;
 }
 .button.red {
-  background: #723131;
+  background: #cf4343;
 }
 .button.purple {
   background: #4b3f5e;
