--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,7 +15,9 @@ body {
 
 .alert {
   background-color: #ff4545;
-  margin: 3rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  text-align: center;
 }
 
 form {
