--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,11 +6,14 @@
 }
 
 .nav {
+  position: fixed;
+  width: 100%;
   overflow: hidden;
   background-color: #db2cb5;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   max-height: initial;
+  margin-bottom: 5rem;
 }
 
 .nav-link {
