--- a/src/components/RegisterPage/Register.css
+++ b/src/components/RegisterPage/Register.css
@@ -1,17 +1,15 @@
 .button {
-  min-height: 1rem;
   display: inline-block;
-  padding: 12px 24px;
+  padding: 0.5rem 1.5rem;
   margin: 0 0.5rem;
   cursor: pointer;
   user-select: none;
   opacity: 0.9;
 
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.95rem;
   letter-spacing: 1px;
   text-shadow: rgba(0, 0, 0, 0.9) 0px 1px 2px;
-  /* font-variant: small-caps; */
 
   background: #434343;
   border: 1px solid #242424;
@@ -42,9 +40,9 @@
     rgba(255, 255, 255, 1) 50%,
     rgba(255, 255, 255, 0) 100%
   );
-  padding: 0px 12px;
-  top: -12px;
-  left: -24px;
+  padding: 0 0.5rem;
+  top: -0.5rem;
+  left: -1rem;
   height: 1px;
   box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 5px;
   transition: all 0.3s ease-in-out;
