--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,4 @@
-* {
-  color: mintcream;
-}
-
 body {
-  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
   font-family: 'Ubuntu', sans-serif;
   margin: 0px;
   background-color: #282c34;
@@ -11,6 +6,7 @@ body {
 
 .content {
   padding: 5rem;
+  color: mintcream;
 }
 
 .alert {
@@ -77,23 +73,12 @@ button {
   cursor: pointer;
 }
 
-.news-item {
-  width: 60%;
-  text-align: left;
-  margin: 2rem auto;
-  padding: 2rem;
-  border: 1px solid #db2cb596;
-  border-radius: 15px;
-  background-color: #21252c;
-  overflow-wrap: break-word;
-}
-
-.news-item:hover {
-  border: 1px solid #db2cb5c9;
-}
-
 img {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
+}
+
+footer {
+  color: mintcream;
 }
