--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -2,7 +2,7 @@
   border: 1px solid #db2cb596;
   border-radius: 5px;
   padding: 1rem;
-  background-color: inherit;
+  background-color: #21252c;
   width: 50%;
   height: 10rem;
 }
