--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -26,12 +26,13 @@
 
 .friend-lists ul h4 {
   display: inline-block;
+  margin: 0.5rem;
 }
 
-.friend-lists ul .button, .search-results ul .button {
+.friend-lists ul .icon.button, .icon.button {
   float: right;
-  right: 0;
-  margin: 1rem initial;
+  margin: 0 0.5rem 0 0.25rem;
+  padding: 0.25rem;
 }
 
 .divider {
@@ -41,7 +42,24 @@
   background-color: grey;
 }
 
-.search-results ul .search-result {
-  display: inline-block;
+#search-results {
   width: 30%;
+  margin: 0;
+  padding: 1%;
+  border: 1px solid #db2cb596;
+  border-radius: 5px;
+  background-color: #21252c;
+}
+
+.search-result {
+  display: inline-block;
+  padding-left: 2rem;
+}
+
+.friend-lists ul h2 {
+  margin-top: 0;
+}
+
+.friend-search {
+  margin-bottom: 0;
 }
